$Id$

2013-08-12  Christian Franke  <franke@computer.org>

	drivedb.h: Intel 320 Series SSDs: Add attribute 183 and 199.

2013-08-10  Christian Franke  <franke@computer.org>

	autogen.sh: automake 1.10.3, 1.12.6, and 1.13.4 work.
	The new automake 1.14 is left out for now due to the
	'subdir-objects' warning and the new 'compile' script.
	Add options '--force' and '--warnings=CATEGORY'.

2013-07-26  Christian Franke  <franke@computer.org>

	smartmontools 6.2

2013-07-25  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: ADATA SP900
	- Transcend CompactFlash Cards: *GCF150
	- Hitachi/HGST Travelstar 5K750: Apple OEM
	- Hitachi/HGST Travelstar Z7K500
	- Hitachi/HGST Travelstar 7K750
	- Hitachi Deskstar 5K3000: *BLE630 OEM
	- Seagate Constellation ES.3
	- Western Digital Caviar Blue (SATA): Rename, add WD1602ABKS
	- Western Digital Caviar Blue (SATA 6Gb/s): Rename, add WD10EZEX
	- USB: Toshiba Canvio 3.0 Portable Hard Drive (0x0480:0xa007)
	- USB: Toshiba Canvio Desktop (0x0480:0xd010)
	- USB: Seagate FreeAgent Desk (0x0bc2:0x3008)
	- USB: Sharkoon 2-Bay RAID Box (0x6795:0x2756)

2013-07-21  Christian Franke  <franke@computer.org>

	utility.cpp: Add check for empty subexpressions in regular expressions.

2013-07-21  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/M500: Rename, add M500
	- SandForce Driven SSDs: Kingston KC300, MS200
	- Intel 320 Series SSDs: *A variant
	- Intel 330/335 Series SSDs: Rename, add 335 Series
	- Toshiba 2.5" HDD MK..46GSX
	- Toshiba 2.5" HDD MK..61GSY[N]: Rename, add *GSY variant
	- Toshiba 2.5" HDD MK..65GSX: *GSXF variant
	- Toshiba 3.5" HDD DT01ACA...
	- Seagate Laptop SSHD
	- Seagate Constellation ES.2: 2GB
	- USB: Seagate Expansion External (0x0bc2:0x3320)
	- USB: Seagate Backup Plus Desktop USB 3.0 (0x0bc2:0xa0a1)
	- USB: WD Elements (0x1058:0x10a2)

2013-07-20  Christian Franke  <franke@computer.org>

	dev_areca.cpp: Fix possible segfault on empty port.
